--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ docker-compose.yml
 
 # yaml file for amazon Q developer
 devfile.yaml 
+# local scratch
+javascript.py.bak
+src/codegraphcontext/cli/nl.py
