chore: ignore local backup and nl.py scratch file

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,5 @@ mcp.json
 docker-compose.yml 
 
 # yaml file for amazon Q developer
-devfile.yaml 
+devfile.yaml javascript.py.bak
+src/codegraphcontext/cli/nl.py
