Revert "Feat/JS-getter-setter-static"

--- a/.gitignore
+++ b/.gitignore
@@ -40,10 +40,6 @@ mcp.json
 docker-compose.yml 
 
 # yaml file for amazon Q developer
-devfile.yaml 
-
-# local scratch
-
-javascript.py.bak
+devfile.yaml javascript.py.bak
 src/codegraphcontext/cli/nl.py
 *.bak
