--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,9 @@ dependencies = [
     "inquirerpy>=0.3.4",
     "python-dotenv>=1.0.0",
     "tree-sitter==0.20.4",                   
-    "tree-sitter-languages==1.10.2"
+    "tree-sitter-languages==1.10.2",
+    "pyyaml",
+    "pytest"
 ]
 
 [project.urls]
