ci: skip Discord invite job for forked PRs to avoid read-only GITHUB_TOKEN failures (fixes #254)

--- a/.github/workflows/post_discord_invite.yml
+++ b/.github/workflows/post_discord_invite.yml
@@ -12,6 +12,8 @@ on:
 
 jobs:
   post_discord_invite:
+    # Skip if the event is a PR from a fork; still run for issues and in-repo PRs
+    if: ${{ github.event_name == 'issues' || (github.event_name == 'pull_request' && !github.event.pull_request.head.repo.fork) }}
     runs-on: ubuntu-latest
     steps:
       - name: Post Discord Invite Comment
