--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -30,6 +30,7 @@ jobs:
           # Commit only if there are changes
           if ! git diff --staged --quiet; then
             git commit -m "docs: update contributors"
+            git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
             git push
           else
             echo "No changes to contributors.md"
