--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -29,7 +29,8 @@ jobs:
           git add contributors.md
           if ! git diff --staged --quiet; then
             git commit -m "docs: update contributors"
-            git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} HEAD:main
+            git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} 
+            git push
           else
             echo "No changes to contributors.md"
           fi
