--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -1,10 +1,8 @@
 name: Update Contributors
 
 on:
-  push:
-    branches: [ main ]
   schedule:
-    - cron: '0 * * * *' # Runs every hour
+    - cron: '0 */6 * * *' # Runs every 6 hours
   workflow_dispatch: # Allows manual triggering
 
 jobs:
@@ -24,13 +22,12 @@ jobs:
 
       - name: Commit and push if there are changes
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global user.name 'Shashankss1205'
+          git config --global user.email 'shashankshekharsingh1205@gmail.com'
           git add contributors.md
           if ! git diff --staged --quiet; then
             git commit -m "docs: update contributors"
-            git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} 
-            git push
+            git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} HEAD:main
           else
             echo "No changes to contributors.md"
           fi
