--- a/.github/workflows/update-contributors.yml
+++ b/.github/workflows/update-contributors.yml
@@ -21,13 +21,15 @@ jobs:
         run: python scripts/generate_lang_contributors.py
 
       - name: Commit and push if there are changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name 'Shashankss1205'
-          git config --global user.email 'shashankshekharsingh1205@gmail.com'
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add contributors.md
           if ! git diff --staged --quiet; then
             git commit -m "docs: update contributors"
-            git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }} HEAD:main
+            git push
           else
             echo "No changes to contributors.md"
           fi
